--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population = Greenville # change None\n",
+    "greenville_population = Greenville[\"population\"] # change None\n",
     "greenville_population # 93"
    ]
   },
